src/objects/Mana_Food_Consumption_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Mana_Household__c</referenceTo>
        <relationshipLabel>Food Consumption Submissions</relationshipLabel>
        <relationshipName>Mana_Food_Consumption_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>temp_processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>temp processed</label>
        <type>Checkbox</type>
    </fields>
    <label>Mana Food Consumption Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Household__c</columns>
        <columns>Submission__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>temp_processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mana Food Consumption Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>